[package]
name = "multiline"
version = "0.1.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Transform realtime log message streams that contain messages spanning multiple lines into streams with one message per line."
readme = "README.md"
keywords = ["batch", "multiline", "logs", "logging"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[dependencies]
multistream-batch = "0.1.0"
cotton = "0.0.1"
structopt = "0.2.18"
regex = "1.1.8"
chrono = "0.4.7"
